--- a/src/app/layouts/main-layout/header/header.component.css
+++ b/src/app/layouts/main-layout/header/header.component.css
@@ -1,12 +1,13 @@
 .header {
+  margin: 0;
+  width: 100%;
+  height: 10vh;
+  background: cornflowerblue;
+  color: cyan;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 20px;
-  color: snow;
-  background: mediumaquamarine;
-  height: 10vh;
-  width: 100%;
 }
 
 .header div {
@@ -14,9 +15,9 @@
 }
 
 .header div:hover {
-  cursor: pointer ;
+  cursor: pointer;
 }
 
 .active {
-  color: aqua;
+  color: chartreuse;
 }
