--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary" class="tool-bar">
   <div>My Application</div>
-  <div class="links">
+  <div *ngIf="user">{{user.username}}</div>
+  <div class="links" *ngIf="!user">
     <div routerLink="auth/login" routerLinkActive="active">Login</div>
     <div routerLink="auth/register" routerLinkActive="active">Register</div>
   </div>
