--- a/src/app/modules/cars/components/cars/cars.component.html
+++ b/src/app/modules/cars/components/cars/cars.component.html
@@ -1,1 +1,12 @@
-{{cars|json}}
+<mat-accordion>
+  <mat-expansion-panel (opened)="panelOpenState = true"
+                       (closed)="panelOpenState = false"
+                       *ngFor="let car of cars">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        {{car.brand}}
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <app-car [car]="car"></app-car>
+  </mat-expansion-panel>
+</mat-accordion>
